# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "scryptenc-cli"
version = "0.6.2"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.70.0"
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage = "https://sorairolake.github.io/rscrypt/"
repository = "https://github.com/sorairolake/rscrypt"
license = "GPL-3.0-or-later"
keywords = ["scrypt"]
categories = ["command-line-utilities"]
exclude = [
  "/.bumpversion.cfg*",
  "/.github",
  "/antora-playbook.yml",
  "/clippy.toml",
  "/Cross.toml",
  "/doc",
  "/justfile",
  "/package*.json*",
  "/rustfmt.toml",
  "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rscrypt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
byte-unit = "4.0.19"
ciborium = { version = "0.2.1", optional = true }
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
clap_complete = "4.4.3"
clap_complete_nushell = "4.4.1"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
fraction = { version = "0.14.0", default-features = false }
humantime = "2.1.0"
once_cell = "1.18.0"
rmp-serde = { version = "1.1.2", optional = true }
scryptenc = "0.8.3"
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.107", optional = true }
serde_yaml = { version = "0.9.25", optional = true }
sysexits = "0.7.3"
sysinfo = "0.29.10"
thiserror = "1.0.49"
toml = { version = "0.8.2", optional = true }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[features]
default = ["cbor", "json", "msgpack", "toml", "yaml"]
cbor = ["dep:ciborium", "dep:serde"]
json = ["dep:serde", "dep:serde_json"]
msgpack = ["dep:rmp-serde", "dep:serde"]
toml = ["dep:serde", "dep:toml"]
yaml = ["dep:serde", "dep:serde_yaml"]

[profile.release]
lto = true
strip = true
