# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "scryptenc-cli"
version = "0.7.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.70.0"
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage = "https://sorairolake.github.io/rscrypt/"
repository = "https://github.com/sorairolake/rscrypt"
license = "GPL-3.0-or-later"
keywords = ["scrypt"]
categories = ["command-line-utilities"]
exclude = [
  "/.bumpversion.cfg*",
  "/.github",
  "/antora-playbook.yml",
  "/clippy.toml",
  "/Cross.toml",
  "/docs",
  "/justfile",
  "/package*.json*",
  "/rustfmt.toml",
  "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rscrypt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
byte-unit = "4.0.19"
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
clap_complete = "4.4.4"
clap_complete_nushell = "4.4.2"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
fraction = { version = "0.14.0", default-features = false }
humantime = "2.1.0"
once_cell = "1.18.0"
scryptenc = "0.8.4"
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
sysexits = "0.7.5"
sysinfo = "0.29.10"
thiserror = "1.0.50"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]

[profile.release]
lto = true
strip = true
