# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "scryptenc-cli"
version = "0.7.4"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.70.0"
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage = "https://sorairolake.github.io/rscrypt/"
repository = "https://github.com/sorairolake/rscrypt"
license = "GPL-3.0-or-later"
keywords = ["scrypt"]
categories = ["command-line-utilities"]
include = ["/LICENSES", "/README.md", "/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rscrypt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
byte-unit = "5.0.4"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
clap_complete = "4.4.4"
clap_complete_nushell = "4.4.2"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
fraction = { version = "0.14.0", default-features = false }
humantime = "2.1.0"
once_cell = "1.19.0"
scryptenc = "0.8.6"
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = { version = "1.0.108", optional = true }
sysexits = "0.7.7"
sysinfo = "0.29.11"
thiserror = "1.0.51"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
